# products

./: README.md
fastapi-app/: database.db  docker-compose.yaml  pyproject.toml
fastapi-app/fastapi_app/: Dockerfile  app.py  database.db  model.py  requirements.txt  service.py
fastapi-app/fastapi_app/templates/: base.html  create.html
flask-app_asgi/: database.db  docker-compose.yaml  dump.rdb  pyproject.toml  requirements.txt
flask-app_asgi/flask_app/: Dockerfile  app.py  dump.rdb  requirements.txt  service.py
flask-app_asgi/flask_app/templates/: index.html
flask-app_uwsgi/: database.db  docker-compose.yaml
flask-app_uwsgi/flask_app/: Dockerfile  app.py  database.db  main.py  model.py
flask-app_uwsgi/flask_app/templates/: base.html
