[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["twezowic <01169258@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
celery = "^5.4.0"
redis = "^5.0.4"
itsdangerous = "2.0.1"
aiofiles = "0.7.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
