[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["twezowic <01169258@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
celery = "^5.4.0"
redis = "^5.0.4"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
